# me_panda_moveit

./: .rosinstall.bak  README.md  passwd.txt
moveit_tutorials/: CMakeLists.txt
moveit_tutorials/_scripts/python_codes_moveit/scripts/: CMakeLists.txt
moveit_tutorials/_scripts/python_codes_moveit/scripts/src/: 1posegoal.cpp  2jointspacegoal.cpp  4cartesianpath.cpp  try4.cpp
panda_moveit_config/launch/: moveit.rviz
